Fix: Alignment, Page & sidebar layout issue
Fix: Alignment, Page & sidebar layout issue

--- a/assets/src/scss/base/_15_alignment.scss
+++ b/assets/src/scss/base/_15_alignment.scss
@@ -82,8 +82,8 @@
 
 // alignwide & alignfull
 
-.alignwide,
-.alignfull {
+body.xe-has-no-sidebar .alignwide,
+body.xe-has-no-sidebar .alignfull {
 
     display: block;
     position: relative;
@@ -94,11 +94,12 @@
     transform: translateX(-50%);
 }
 
-.alignfull {
+body.xe-has-no-sidebar .alignfull {
 
     width: 98vw;
     max-width: 98vw;
 }
+
 
 // WordPress embeds
 
