--- a/assets/src/scss/layouts/_02_single.scss
+++ b/assets/src/scss/layouts/_02_single.scss
@@ -323,241 +323,6 @@
     order: 2;
 }
 
-// comments
-
-#xe-comment-toggle-btn {
-
-    display: block;
-    width: 100%;
-}
-
-#xe-comment-toggle-btn .icon {
-
-    margin-left: 10px;
-}
-
-#comments {
-
-    display: block;
-    margin-top: 40px;
-}
-
-.xe-comment-toggle-btn-enabled #comments {
-
-    display: none; // hide comment form by default when toggle button is enabled in customizer.
-}
-
-#xe-comment-toggle-btn #xe-hide-comment-text {
-
-    display: none;
-}
-
-.xe-comment-toggle-btn-enabled.xe-visible-comments #comments,
-.xe-visible-comments #xe-comment-toggle-btn #xe-hide-comment-text {
-
-    display: block;
-}
-
-.xe-visible-comments #xe-comment-toggle-btn #xe-show-comment-text {
-
-    display: none;
-}
-
-// comment form titles
-
-#comments .comments-title,
-#comments #respond .comment-reply-title {
-
-    font-size: var(--xe_base_font_size);
-    font-weight: var(--xe_base_font_weight);
-    line-height: var(--xe_base_font_line_height);
-    letter-spacing: var(--xe_base_letter_spacing);
-    color: var(--xe_base_text_color);
-    border: 2px dashed var(--xe_border_color);
-    margin-bottom: 30px;
-    padding: 15px;
-    border-radius: 5px;
-}
-
-#comments .comments-title::before,
-#comments #respond .comment-reply-title::before {
-
-    content: "\e643";
-    display: inline-block;
-    margin-right: 5px;
-    font-family: var(--xe_iconfont);
-}
-
-// comments list
-
-#comments .comment-list {
-
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-#comments .comment-list .comment-body {
-
-    position: relative;
-}
-
-#comments .comment-list .children {
-
-    margin: 30px 0 30px 40px;
-}
-
-#comments .comment-list li {
-
-    display: block;
-    margin-bottom: 40px;
-}
-
-#comments .comment-list li .comment-author-avatar {
-
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: auto;
-    bottom: auto;
-}
-
-#comments .comment-list li .comment-author-avatar figure  {
-
-    display: inline-flex;
-    flex-wrap: wrap;
-    flex: 0 0 32px;
-    max-width: 32px;
-    overflow: hidden;
-    border-radius: 50%;
-}
-
-#comments .comment-list li .comment-author-info {
-
-    display: block;
-    margin-left: 42px;
-}
-
-#comments .comment-list li .comment-author-info a,
-#comments .comment-list li .comment-author-info .comment-meta  {
-
-    display: inline-block;
-    font-size: 14px;
-    font-weight: normal;
-}
-
-#comments .comment-list li .comment-author-info cite {
-
-    font-style: normal;
-}
-
-#comments .comment-list li .comment-author-info .comment-meta a:not(.comment-edit-link) {
-
-    color: var(--xe_base_text_color);
-}
-
-#comments .comment-list li .reply .comment-reply-link,
-#comments .comment-list li .comment-author-info a.comment-edit-link {
-
-    display: inline-block;
-    font-size: 11px;
-    font-weight: bold;
-    line-height: 1;
-    letter-spacing: 0.50px;
-    text-transform: uppercase;
-    text-decoration: none;
-    margin-left: 20px;
-}
-
-#comments .comment-list li .comment-author-info a.comment-edit-link {
-
-    margin-left: 5px;
-    text-decoration: none;
-}
-
-#comments .comment-list li .comment-author-info a.comment-edit-link::before {
-
-    content: "\e61c";
-    margin-right: 2px;
-    font-family: var(--xe_iconfont);
-}
-
-#comments .comment-list li .comment-author-info a.comment-edit-link:hover {
-
-    text-decoration: none;
-}
-
-#comments .comment-list li .comment-author-info a.comment-edit-link:focus {
-
-    outline: none;
-}
-
-#comments .comment-list li .comment-author-comment {
-
-    border: 1px solid var(--xe_border_color);
-    border-radius: 5px;
-    padding: 20px 20px 0 20px;
-    margin: 30px 0 20px 0;
-    box-shadow: 0 1px 3px rgb(0,0,0,0.1);
-}
-
-#comments .comment-list li .reply .comment-reply-link {
-
-    color: grey;
-}
-
-#comments .comment-list li .reply .comment-reply-link:hover {
-
-    color: var(--xe_base_link_color);
-}
-
-#comments .comment-list li .reply .comment-reply-link::before {
-
-    content: "\e6bc";
-    margin-right: 5px;
-    font-family: var(--xe_iconfont);
-}
-
-// respond comment form
-
-#comments #respond {
-
-    margin-top: 30px;
-}
-
-#comments #respond .comment-reply-title #cancel-comment-reply-link {
-
-    display: inline-block;
-    margin-left: 10px;
-}
-
-#comments #respond .comment-reply-title #cancel-comment-reply-link:hover {
-
-    text-decoration: none;
-}
-
-#comments #respond .comment-reply-title #cancel-comment-reply-link:focus {
-
-    outline: none;
-}
-
-#comments #respond .comment-reply-title #cancel-comment-reply-link::before {
-
-    content: "\e646";
-    display: inline-block;
-    margin-right: 5px;
-    font-family: var(--xe_iconfont);
-}
-
-@media( max-width: 575px ) {
-
-    #comments .comment-list .children {
-
-        margin-left: 30px; 
-    }
-}
-
 // related posts
 
 .xe-related-posts {
@@ -597,29 +362,12 @@
 	Case: container width normal with no sidebar
    -------------------------------------------------------------------------- */
 
-//.single .xe-container-narrow #comments,
-//.single .xe-container-narrow .xe-related-posts,
-//.single .xe-container-narrow .hentry .page-links,
-//.single .xe-container-narrow .hentry .xe-post-tags,
-//.single .xe-container-narrow #xe-comment-toggle-btn,
-//.single .xe-container-narrow #xe-page .xe-breadcrumb, 
-//.single .hentry .xe-entry-metas, 
-//.single .xe-container-narrow .hentry .xe-author-box,
-//.single .xe-entry-title,
-//.single .hentry .xe-entry-excerpt,
-//.single .xe-container-narrow .hentry .xe-post-navigation,
-//.single .xe-entry-categories {
-
-//    margin-left: 5%;
-//    margin-right: 5%;
-//}
-
-.single.xe-has-no-sidebar [class*="xe-container"]:not(.xe-container-narrow) #comments,
-.single.xe-has-no-sidebar [class*="xe-container"]:not(.xe-container-narrow) .xe-post-tags,
-.single.xe-has-no-sidebar [class*="xe-container"]:not(.xe-container-narrow) .xe-author-box,
-.single.xe-has-no-sidebar [class*="xe-container"]:not(.xe-container-narrow) .xe-related-posts,
-.single.xe-has-no-sidebar [class*="xe-container"]:not(.xe-container-narrow) .xe-post-navigation,
-.single.xe-has-no-sidebar [class*="xe-container"]:not(.xe-container-narrow) #xe-comment-toggle-btn {
+.single.xe-has-no-sidebar:not(.single-product) [class*="xe-container"]:not(.xe-container-narrow) #comments,
+.single.xe-has-no-sidebar:not(.single-product) [class*="xe-container"]:not(.xe-container-narrow) .xe-post-tags,
+.single.xe-has-no-sidebar:not(.single-product) [class*="xe-container"]:not(.xe-container-narrow) .xe-author-box,
+.single.xe-has-no-sidebar:not(.single-product) [class*="xe-container"]:not(.xe-container-narrow) .xe-related-posts,
+.single.xe-has-no-sidebar:not(.single-product) [class*="xe-container"]:not(.xe-container-narrow) .xe-post-navigation,
+.single.xe-has-no-sidebar:not(.single-product) [class*="xe-container"]:not(.xe-container-narrow) #xe-comment-toggle-btn {
 
     max-width: var(--xe_container_width_narrow);
     margin-left: auto;
